--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-.pio
+# Credentials file with sensitive information
+src/credentials.h
+
+# PlatformIO build directory
+.pio/
+.pioenvs/
+.piolibdeps/
+
+# VSCode configuration
+.vscode/
+
+# Build output
+build/
+
+# Cache files
+.DS_Store
+Thumbs.db
+
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
